<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="45dp"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvAcademyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/academy_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/ivLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvAcademyName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_back"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_subtitle"
                        android:textSize="15sp"
                        android:textColor="@color/secondary_text"
                        android:layout_marginTop="10dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:hint="@string/email"
                        app:startIconDrawable="@drawable/ic_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/password"
                        app:startIconDrawable="@drawable/ic_lock"
                        app:endIconMode="password_toggle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cbRememberUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/remember_me"
                            android:textColor="@color/secondary_text"/>

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnForgotPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            style="@style/Widget.MaterialComponents.Button.TextButton"/>

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/sign_in"
                        android:textSize="15sp"
                        android:layout_marginTop="20dp"
                        app:cornerRadius="20dp"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>